2013-02-25  Ryosuke Niwa  <rniwa@webkit.org>

        Build fix. run-perf-tests was reporting with revision numbers ending with \r.
        Don't include \r at the end of svn info lines on Windows.

        This is similar to r143839.

        * Scripts/webkitpy/common/checkout/scm/svn.py:
        (SVN.value_from_svn_info):

2013-02-25  James Simonsen  <simonjam@chromium.org>

        [Resource Timing] Update test suite so it can be exported to the W3C
        https://bugs.webkit.org/show_bug.cgi?id=107343

        Reviewed by Tony Gentilcore.

        * Scripts/export-w3c-performance-wg-tests: Clean up output.
        * Scripts/import-w3c-performance-wg-tests:

2013-02-25  Anders Carlsson  <andersca@apple.com>

        Add a new unavailablePluginButtonClicked callback that takes a WKDictionary of plug-in information
        https://bugs.webkit.org/show_bug.cgi?id=110821
        <rdar://problem/13265303>

        Reviewed by Beth Dakin.

        Update for WebKit2 changes.

        * MiniBrowser/mac/WK2BrowserWindowController.m:
        (-[WK2BrowserWindowController awakeFromNib]):
        * WebKitTestRunner/TestController.cpp:
        (WTR::TestController::createOtherPage):
        (WTR::TestController::createWebViewWithOptions):
        (WTR::TestController::unavailablePluginButtonClicked):
        * WebKitTestRunner/TestController.h:
        (TestController):

2013-02-21  Jeffrey Pfau  <jpfau@apple.com>

        Optionally partition cache to prevent using cache for tracking
        https://bugs.webkit.org/show_bug.cgi?id=110269

        Reviewed by Maciej Stachowiak.

        Add test suite for public suffix functions on Mac.

        * TestWebKitAPI/TestWebKitAPI.xcodeproj/project.pbxproj:
        * TestWebKitAPI/Tests/mac/PublicSuffix.mm: Added.
        (TestWebKitAPI):
        (TestWebKitAPI::TEST_F):

2013-02-25  Dirk Pranke  <dpranke@chromium.org>

        nrwt: reenable multiple http shards on chromium win